--- a/justlook-vue/index.html
+++ b/justlook-vue/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>My Github Pages</title>
+    <title>Justlook</title>
   </head>
   <body>
-    <a href='/justlook-vue'>Justlook</a>
-	<a href='/viomedia-test'>Viomedia test</a>
+    <div id="app"></div>
+    <script src="dist/build.js"></script>
   </body>
 </html>
